--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ body{
 .info img{
     height: 180px;
     width: 240px;
+    border: 3px solid #3882f6;
+    border-radius: 20px;
+    box-shadow: rgba(56, 130, 246, 0.4) -5px 5px, rgba(56, 130, 246, 0.3) -10px 10px, rgba(56, 130, 246, 0.2) -15px 15px, rgba(56, 130, 246, 0.1) -20px 20px, rgba(56, 130, 246, 0.05) -25px 25px;
 }
 
 ul{
@@ -101,6 +104,8 @@ button{
     font-size: 36px;
     font-weight: 800;
     color: #1F2937;
+    margin: 50px 150px;
+    text-align: center;
 }
 
 .quote .text{
@@ -134,4 +139,23 @@ button{
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.container{
+    display: flex;
+    margin: 30px 150px 100px;
+    justify-content: space-between;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    align-items: center;
+    max-width: 262.75px;
+}
+
+.info .text{
+    text-align: center;
+    font-style: oblique;
 }
