--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body{
 .hero img{
     height: 224px;
     width: 398.2px;
-    flex-shrink: 0;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 20px;
 }
@@ -67,7 +66,7 @@ a:hover{
 }
 
 .info{
-    background-color: whitesmoke;
+    background-color: white;
 }
 
 .quote{
@@ -87,7 +86,7 @@ a:hover{
 .footer{
     background-color: #1F2937;
     color: #E5E7EB;
-    height: 50px;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -131,7 +130,9 @@ button{
 
 .quote .title{
     font-weight: 500;
-    font-family: sans-serif;
+    font-family: serif;
+    text-align: end;
+    font-style: italic;
 }
 
 .CTA .title{
@@ -158,7 +159,6 @@ button{
 .info .container{
     display: flex;
     margin: 30px 150px 100px;
-    justify-content: space-between;
 }
 
 .card{
@@ -172,10 +172,6 @@ button{
 .info .text{
     text-align: center;
     font-style: oblique;
-}
-
-.quote .title{
-    text-align: end;
 }
 
 .CTA .container{
